	* dia/diacanvas-api.raw: Ditto
	* configure.in: Ditto + bumped version number
	* dia/Dia.metadata: Added rename metadata for events in 
	  DiaUndoManager
	* NEWS: Updated for new release
	* sample/sample.cs: Removed Simple Text Item,
	  commented out broken undo/redo function,
	  removed e-mail addresses from the about dialog
	* sample/CanvasTextBox: Removed EditingDoneHandler.

2004-08-18  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* diacanvas-sharp.pc.in: Added require list of 
	  gnome-sharp and glade-sharp

2004-08-11  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/CanvasLine.custom: Updated Dash property to use new
	  glue code.
	* dia/DashStyle.cs: Removed
	* dia/glue/dia-canvas-line.c: New glue code to handle 
	  dash property properly, fixed testcode
	* dia/glue/dia-canvas-line.c.new: Removed
	* sample/sample.cs: Use the new Dash property
	* NEWS: CanvasLine.Dash is working 100%
	* PROBLEMS: Added problems with CanvasClock, 
	  editable text and text problem

2004-08-04  Mario Fuentes  <mario@gnome.cl>

	* sample/CanvasClock.cs: Fixed Clock's hand size.

2004-08-04  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Bump version
	  Add AssemblyInfo.cs
	* sample/AssemblyInfo.cs.in: Added
	* sample/sample.cs: Cleaned up a bit
	* sample/CanvasClock.cs: Added IntPtr ctor
	* sample/CanvasClock.cs: Removed RegisterGType, not needed anymore
	* sample/CanvasFigure.cs: Ditto
	* sample/CanvasTextBox.cs: Ditto
	* NEWS: Updated with new customizing feature

2004-08-03  Mario Fuentes  <mario@gnome.cl>

	* dia/CanvasItem.custom: Change return type in delegate 'ShapeValueDelegate'
	  and method 'ShapeValue_Callback' from Shape to IntPtr, for fixed bug
	  produced when method ShapeValueFunc are override.
	* sample/CanvasClock.cs: Added a custom item.
	* sample/sample.cs: Added a Clock item.
	* sample/makefile.am: Added CanvasClock.cs.

2004-08-01  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/glue/dia-canvas-line.c: Added, more than one dash, test code.